--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
   <body>
     <nav class="nav expanded">
       <h1>
-        <svg
-          viewBox="11 30 110 95"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="#374A67">
-          <g transform="rotate(45, 50, 50)">
-            <rect x="20" y="20" width="100" height="30" />
-            <rect x="65" y="60" width="20" height="60" />
-          </g>
-        </svg><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span>
+        <img src="late-parrot.png"><div><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span><div>
       </h1>
       <button class="ham" onclick="this.classList.toggle('open')">
         <i></i>
@@ -36,7 +28,7 @@
       <p><a href="https://lipsum.com">Lorem ipsum dolor sit amet</a>, consectetur adipiscing elit. Etiam efficitur purus ac lorem tempus, non convallis nulla lacinia. Praesent a nisl vitae tortor hendrerit dapibus. Fusce lorem eros, tempus id neque in, pretium imperdiet quam. Sed dui quam, finibus ac efficitur vitae, ultrices dapibus velit. Vivamus malesuada eu lorem in malesuada. Pellentesque ultricies pharetra lorem. Cras ac urna vel neque ultricies aliquet feugiat gravida felis. Nullam eleifend, ligula non ornare placerat, felis est consectetur risus, sit amet ornare nunc ipsum sit amet metus. Aenean sit amet nisi aliquam, vulputate enim eu, efficitur velit. Pellentesque a felis dignissim, lobortis turpis et, ultrices lorem. Donec iaculis, turpis sed maximus aliquet, urna odio bibendum turpis, eu pretium diam sem eget justo. Fusce egestas ut ex vitae interdum.</p>
       <p>In et interdum justo. Sed lacus justo, iaculis tristique velit vel, tincidunt feugiat ipsum. Maecenas ut tristique metus. Duis a nisi nibh. Nunc sed vestibulum ligula. Fusce fringilla faucibus molestie. Cras malesuada orci quis tincidunt laoreet. Praesent consequat nec ante volutpat maximus. Nullam luctus maximus venenatis. Cras eget neque et elit volutpat lacinia eget nec magna. Nulla ut orci feugiat, suscipit lorem sed, viverra dolor. Nulla eleifend justo eget commodo posuere.</p>
       <p>Morbi quis sem nec felis laoreet sodales. Donec luctus quis dui non venenatis. Aenean fringilla, quam vel pretium lacinia, lacus nisl lobortis massa, quis bibendum ante metus sit amet arcu. Aliquam malesuada sit amet metus eleifend vulputate. Nullam ultrices elit diam, sit amet porttitor arcu vehicula id. Donec vel faucibus nisi, non tempor neque. Morbi at ex vitae nisl molestie pulvinar. Nulla ligula lacus, accumsan finibus fermentum vel, porttitor id elit. Aenean sed sapien vitae quam feugiat ultrices non id nulla. Nunc lorem leo, hendrerit ac purus eget, sollicitudin tincidunt ex. Etiam sollicitudin molestie magna, non bibendum nibh venenatis ac. Vestibulum eu massa nisl. Fusce aliquam est quis massa venenatis dignissim. Nulla congue, velit gravida molestie euismod, neque mauris malesuada neque, a imperdiet libero nisl feugiat dui.</p>
-      <img src="https://placehold.co/600x400/eee/aaa?text=Hello,+world!&font=Noto+Sans" id="img1">
+      <img src="https://placehold.co/600x400/666/aaa?text=Hello,+world!&font=Noto+Sans" id="img1">
       <label for="img1">A nice placeholder image</label>
       <p>Cras pharetra consequat justo eget ornare. Sed viverra sapien at leo convallis, non aliquam dui lobortis. Curabitur mollis dignissim nulla, vitae commodo augue feugiat quis. Duis sed turpis nunc. Suspendisse sed magna dolor. In auctor quam id quam interdum egestas. Duis imperdiet dapibus scelerisque. Proin lacinia euismod leo sed hendrerit. Fusce porta pretium tortor. Phasellus ligula est, laoreet at dolor eget, mollis interdum ipsum.</p>
       <pre><code>print("Hello, world!")</code></pre>
