--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav expanded">
       <h1>
-        <img src="late-parrot.png"><div><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span><div>
+        <img src="late-parrot-small.png"><div><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span><div>
       </h1>
       <button class="ham" onclick="this.classList.toggle('open')">
         <i></i>
