--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="theme-color" content="#55555a">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" sizes="32x32" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="common.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/atom-one-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
     <script src="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.css">
+
+    <script src="https://unpkg.com/feather-icons"></script>
+
+    <link rel="stylesheet" href="common.css">
+
     <script>
       hljs.addPlugin(new CopyButtonPlugin());
       hljs.highlightAll();
@@ -21,7 +25,7 @@
   <body>
     <nav class="nav expanded">
       <h1>
-        <img src="late-parrot-small.png"><div><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span><div>
+        <img src="assets/late-parrot-small.png"><div><span class="name">Late Parrot</span><span class="tagline">late-parrot.github.io</span><div>
       </h1>
       <button class="ham" onclick="this.classList.toggle('open')">
         <i></i>
@@ -59,8 +63,12 @@
     </main>
     <footer class="footer">
       <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/">Portions of this website Copyright &copy; 2025 <span property="cc:attributionName">Eric Schuette</span> under <a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;" class="cc-link">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a><br>Some rights reserved.</p>
-      <a href="https://github.com/late-parrot">GitHub</a>
+      <span style="display: inline-flex; align-items: center; gap: 5px;">
+        <img height="20" width="20" src="https://unpkg.com/simple-icons@v15/icons/github.svg" style="filter:invert(1)" />
+        <a href="https://github.com/late-parrot">GitHub</a>
+      </span>
     </footer>
+
     <script src="common.js"></script>
   </body>
 </html>
