--- a/techniques/index.html
+++ b/techniques/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="theme-color" content="#55555a">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" sizes="32x32" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon.ico">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/atom-one-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
@@ -14,7 +14,7 @@
 
     <script src="https://unpkg.com/feather-icons"></script>
 
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="/common.css">
 
     <script>
       hljs.addPlugin(new CopyButtonPlugin());
@@ -51,6 +51,6 @@
       </span>
     </footer>
 
-    <script src="common.js"></script>
+    <script src="/common.js"></script>
   </body>
 </html>
