--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <i></i>
       </button>
       <div class="nav-links">
-        <span><a href="#">Page 1</a></span>
-        <span><a href="#">Page 2</a></span>
-        <span><a href="#">Page 3</a></span>
+        <span><a href="/">Home</a></span>
+        <span><a href="/techniques">Techniques</a></span>
+        <span><a href="/projects">Projects</a></span>
       </div>
     </nav>
     <main class="main">
