--- a/techniques/index.html
+++ b/techniques/index.html
@@ -20,7 +20,7 @@
       hljs.addPlugin(new CopyButtonPlugin());
       hljs.highlightAll();
     </script>
-    <title>Late Parrot | Home</title>
+    <title>Late Parrot | Techniques</title>
   </head>
   <body>
     <nav class="nav expanded">
