--- a/techniques/index.html
+++ b/techniques/index.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
     <main class="main">
-      <h1 id="test1">Techniques</h1>
+      <h1 id="techniques">Techniques</h1>
       <p>I'll try to post one of these pages whenever I find an interesting programming technique, but there could be a considerable gap between posts. These articles each describe a different programming technique that I found interesting. This includes how to use it in your own code, why it works, and any other interesting details I want to include. Below is a list of the articles posted so far, with the most recent at the top.</p>
       <p><a href="nan-boxing">NaN Boxing</a></p>
     </main>
